--- a/chess.css
+++ b/chess.css
@@ -52,20 +52,20 @@ table {
   border: 0px;
 }
 
-tr:nth-child(odd)>td:nth-child(odd):not(.pieces) {
-  background-image: url('art/field/fire.png');
+tr:nth-child(odd)>td:nth-child(odd):not(#pieces) {
+  background-image: url('art/field/red.png');
 }
 
-tr:nth-child(odd)>td:nth-child(even):not(.pieces) {
-  background-image: url('art/field/wood45.png');
+tr:nth-child(odd)>td:nth-child(even):not(#pieces) {
+  background-image: url('art/field/brown.png');
 }
 
-tr:nth-child(even)>td:nth-child(even):not(.pieces) {
-  background-image: url('art/field/fire.png');
+tr:nth-child(even)>td:nth-child(even):not(#pieces) {
+  background-image: url('art/field/red.png');
 }
 
-tr:nth-child(even)>td:nth-child(odd):not(.pieces) {
-  background-image: url('art/field/wood45.png');
+tr:nth-child(even)>td:nth-child(odd):not(#pieces) {
+  background-image: url('art/field/brown.png');
 }
 
 td#chat {
@@ -80,11 +80,6 @@ td#chat {
   margin: 0;
   padding: 0;
   border: 0;
-}
-
-td.pieces {
-  width: 200px;
-  height: 200px;
 }
 
 .field {
@@ -108,19 +103,11 @@ td.pieces {
 */
 
 
-td.pieces {
+td#pieces {
   width: 220px;
-  height: 50px;
-  flex-flow: row;
-}
-
-td.pieces#white {
+  height: 440px;
   border: 1px solid white;
   background-color: rgba(127, 127, 127, 0.50);
 }
 
-td.pieces#black {
-  border: 1px solid black;
-  background-color: rgba(127, 127, 127, 0.50);
-}
 
